# autocorrelations_trng

./: .gitattributes  README.md  pyproject.toml
notebooks/: autocorrelation.ipynb  autocorrelation_patterns.ipynb  autocorrelations.ipynb  drift_pseudorandomness.ipynb  extractors_comparison.ipynb
src/: utils.py
src/deep_correlations_trng/: utils.py
src/deep_correlations_trng/data/230118/: log_20230118155436_dff.txt
src/deep_correlations_trng/data/230203/: readme.md
src/deep_correlations_trng/data/230203/RO0_10_RO1_10/: log_20230203145635_dff.txt
src/deep_correlations_trng/data/230203/RO0_15_RO1_15/: log_20230203145942_dff.txt
src/deep_correlations_trng/data/230203/RO0_20_RO1_20/: log_20230203150429_dff.txt
src/deep_correlations_trng/data/230203/RO0_20_RO1_30/: log_20230203151152_dff.txt
src/deep_correlations_trng/data/230203/RO0_30_RO1_20/: log_20230203150759_dff.txt
src/deep_correlations_trng/data/230203/RO0_30_RO1_30/: log_20230203150925_dff.txt
src/deep_correlations_trng/data/230214/test1/: log_20230214164304_dff.txt
src/deep_correlations_trng/data/230214/test2/: log_20230214164556_dff.txt
src/deep_correlations_trng/data/230215/: readme.md
src/deep_correlations_trng/data/230215_2/: readme.md
src/deep_correlations_trng/data/230215_2/acq_20230215112217_dff/: log_20230215112217_dff.txt
src/deep_correlations_trng/data/230215_2/ro29ro33/: log_20230215120433_dff.txt
src/deep_correlations_trng/data/230215_2/ro30ro33/: log_20230215120212_dff.txt
src/deep_correlations_trng/data/experiment1/: readme.md
(+8 files in other folders)
