[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deep_correlations_trng"
description = "Analyses high-order correlations in bits output by random number generators."
version = "0.1"
authors = [
    {name = "Maciej Skórski", email = "maciej.skorski@gmail.com"},
]
dependencies = [
    "numpy",
    "scipy",
    "statsmodels",
    "matplotlib",
    "multiprocess",
]

[options.packages.find]
where = "src"

[tool.setuptools.package-data]
"deep_correlations_trng.data" = ["*.bin","*/*/bin"]